# ITE-005

./: LICENSE  README.md
Monitoria/: Monitoria.hs  Monitoria2.hs  Monitoria3.hs  Monitoria4.hs
P1/: Anotacoes.md  Aula1.hs  Aula2.hs  Aula3.hs  Aula4.hs  Aula5.hs  Aula6.hs  Aula7.hs  ChamadaOral4.hs  ExercicioAula.hs
P2/: Aula8.hs
ayesod/: Main.hs  ayesod.cabal  client_session_key.aes
ayesod/.stack-work/install/x86_64-linux/lts-5.18/7.10.3/flag-cache/: QuickCheck-2.8.1-8a87b464a167a1dd789e3a0c72a16364  aeson-0.9.0.1-0c47382762974872bc69e20659147f2e  aeson-compat-0.3.3.0-f452a272d05d63a32ef08c634e228b92  aeson-pretty-0.7.2-0469dff7e49e7c63324f21cee00c5d0d  alex-3.1.7  ansi-terminal-0.6.2.3-7b40b18f4e53e6f53c2ffd807e929ca9  ansi-wl-pprint-0.6.7.3-c624a14e647c937768855ca360a122b5  appar-0.1.4-49c6ef6e14982c7422c400172aa14b53  asn1-encoding-0.9.3-5a82acfe7bb08b86630b16ae48e8ca46  asn1-parse-0.9.4-43c5a0485bd62983c62e2c30ee6931ed  asn1-types-0.3.2-23b6c4938888e3e1a32437136f9ef98e  async-2.1.0-033e4fae4da028fc2d6502bd36e5e5a1  attoparsec-0.13.0.2-1e0ddf88a11f20164d0b8d113c656d88  authenticate-1.3.3.1-ab7ff238c6d876074566e2ff73c8447e  auto-update-0.1.4-26185380f9814bfda0946e559c9342a7  (+137 more)
ayesod/messages/: pt-br.msg
ayesod/src/: Foundation.hs  Handlers.hs  Import.hs
etc/: Aula13.hs  main_old.hs
web/: web.cabal
web1/: client_session_key.aes  main.hs  web1.cabal
web2/: client_session_key.aes  main.hs  web2.cabal
web3/: main.hs  web3.cabal
web4/: main.hs  web4.cabal
web5/: main.hs  web5.cabal
web6/: main.hs  web6.cabal
web6/static/: teste.css
